# grok

./: Cargo.toml  LICENSE  Makefile  README.md  codecov.yml
.github/workflows/: ci.yml
examples/: add_pattern.rs  default_patterns.rs  named_capture_only.rs  type.rs
src/: lib.rs
src/patterns/: firewalls  grok-patterns  haproxy  linux-syslog  mongodb
